# MayaSceneKit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.jp.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  rust-toolchain.toml
crates/maya-scene-kit-audit/: Cargo.toml
crates/maya-scene-kit-audit/src/: lib.rs  persistent_cache.rs
crates/maya-scene-kit-audit/src/audit/: lower_python.rs  mod.rs  policy.rs  rules.rs
crates/maya-scene-kit-audit/src/audit/analyze/: builders.rs  callback_flags.rs  custom_rules.rs  mel.rs  mod.rs  python.rs  surface.rs  tests.rs  text_scan.rs
crates/maya-scene-kit-audit/src/public/: audit.rs
crates/maya-scene-kit-audit/tests/: coverage_hardening.rs  workspace_audit.rs
crates/maya-scene-kit-cli/: Cargo.toml
crates/maya-scene-kit-cli/src/: main.rs  scene.rs
crates/maya-scene-kit-cli/src/cli/: args.rs  fs.rs  issues_artifacts.rs  mod.rs  output_contracts.rs  runtime_context.rs
crates/maya-scene-kit-cli/src/cli/cmd/: audit.rs  dump.rs  inspect.rs  mod.rs  paths.rs  replace.rs  script_clean.rs  to_ascii.rs
crates/maya-scene-kit-cli/src/cli/render/: json.rs  mod.rs  text.rs
crates/maya-scene-kit-cli/tests/: audit_bridge.rs  load_options_bridge.rs
crates/maya-scene-kit-edit/: Cargo.toml
crates/maya-scene-kit-edit/src/: lib.rs  typed_value_semantics.rs
crates/maya-scene-kit-edit/src/scene/: error.rs  mod.rs
crates/maya-scene-kit-edit/src/scene/edit/: clean.rs  composite.rs  materialize.rs  mod.rs  path_owner_delete.rs  paths.rs  preview.rs  replace_rules.rs  stage.rs
crates/maya-scene-kit-edit/src/scene/emit/: mod.rs
crates/maya-scene-kit-edit/src/scene/io/: write.rs
crates/maya-scene-kit-edit/src/scene/ir/: mod.rs  raw.rs  trace.rs
crates/maya-scene-kit-edit/src/scene/ops/: detect.rs  mod.rs  to_ascii.rs
crates/maya-scene-kit-edit/src/scene/public/: clean.rs  composite_edit.rs  conversion.rs  core.rs  map.rs  path_owner_delete.rs  paths.rs  scripts.rs  staging.rs
crates/maya-scene-kit-edit/src/scene/recover/: mod.rs  raw_inventory.rs
crates/maya-scene-kit-edit/tests/: workspace_scene.rs
crates/maya-scene-kit-formats/: Cargo.toml
crates/maya-scene-kit-formats/src/: addattr_semantics.rs  byte_span.rs  error.rs  lib.rs  maya_defaults.rs  mel.rs  mel_calls.rs  mel_map.rs  mel_top_level.rs  model.rs  reference_semantics.rs  replace_rules.rs  typed_value_semantics.rs  unit_semantics.rs
crates/maya-scene-kit-formats/src/ma/: ast.rs  commands.rs  error.rs  lexer.rs  mod.rs  parse.rs  parse_add_attr.rs  parse_create_node.rs  parse_driver.rs  parse_legacy.rs  parse_links.rs  parse_references.rs  parse_set_attr.rs  parse_support.rs  parse_tests.rs  parse_units.rs  paths.rs  raw_dump.rs  requires.rs  rewrite.rs  scripts.rs  selective.rs  text.rs  types.rs  values.rs
crates/maya-scene-kit-formats/src/mb/: defaults.rs  head.rs  layout.rs  mod.rs  parser.rs  paths.rs  raw_walk.rs  scripts.rs  section.rs
crates/maya-scene-kit-formats/src/mb/rewrite/: chunk_encode.rs  mod.rs  path_rewrite.rs  script_rewrite.rs
crates/maya-scene-kit-formats/tests/: parse_mb.rs
crates/maya-scene-kit-gui/: Cargo.toml  build.rs
crates/maya-scene-kit-gui/locales/: cn.json  en.json  ja.json
crates/maya-scene-kit-gui/resources/windows/: app.psd  app.rc
crates/maya-scene-kit-gui/src/: i18n.rs  lib.rs  main.rs  menu_bar.rs  model.rs  persistence.rs
crates/maya-scene-kit-gui/src/gui/: audit_detail_dialog.rs  auto_analyze.rs  cache_maintenance.rs  cache_restore.rs  cache_write.rs  helpers.rs  ignore_dialog.rs  jobs.rs  max_bytes_dialog.rs  menu.rs  mod.rs  path_collect_dialog.rs  path_edit.rs  persist_flush.rs  plugins.rs  render.rs  replace_dialog.rs  results.rs  shell.rs  tables.rs  tests.rs  workspace.rs
crates/maya-scene-kit-gui/src/gui/path/: clipboard.rs  collect.rs  collect_dialog.rs  helpers.rs  mod.rs  table_state.rs
crates/maya-scene-kit-gui/src/gui/tables/: audit.rs  columns.rs  context_menu.rs  file.rs  mod.rs  path.rs
crates/maya-scene-kit-observe/: Cargo.toml
crates/maya-scene-kit-observe/src/: addattr_semantics.rs  lib.rs  model.rs  typed_value_semantics.rs
crates/maya-scene-kit-observe/src/scene/: context.rs  core.rs  dump.rs  error.rs  evidence.rs  execution.rs  inspect.rs  integrity.rs  mb_extract.rs  mb_read_session.rs  mod.rs  paths.rs  patterns.rs  persistent_cache.rs  recovery.rs  runtime_assets.rs  scripts.rs
crates/maya-scene-kit-observe/src/scene/analyze/: mod.rs
crates/maya-scene-kit-observe/src/scene/decode/: dispatcher.rs  mod.rs
crates/maya-scene-kit-observe/src/scene/execution/: catalog.rs  dependency.rs  effect_registry.rs  mel_surface.rs  python_source.rs  surfaces.rs
crates/maya-scene-kit-observe/src/scene/forensics/: mod.rs
crates/maya-scene-kit-observe/src/scene/ir/: attrs.rs  canonical.rs  diagnostics.rs  events.rs  mod.rs  raw.rs  shared.rs  trace.rs
crates/maya-scene-kit-observe/src/scene/model/: mod.rs
crates/maya-scene-kit-observe/src/scene/observe/: bundle.rs  catalog.rs  dependency.rs  effect_registry.rs  inspect.rs  ma.rs  mb.rs  mod.rs  path_resolve.rs  surfaces.rs
crates/maya-scene-kit-observe/src/scene/ops/: detect.rs  mod.rs
crates/maya-scene-kit-observe/src/scene/public/: core.rs  dump.rs  evidence.rs  inspect.rs  paths.rs  recovery.rs  scripts.rs
crates/maya-scene-kit-observe/src/scene/query/: dump.rs  mod.rs  paths.rs  resolve.rs  scripts.rs
crates/maya-scene-kit-observe/src/scene/recover/: builder.rs  links.rs  mod.rs  nodes.rs  quality.rs  raw_inventory.rs  references.rs  select.rs
crates/maya-scene-kit-observe/src/scene/schema/: addattr_tokens.rs  builtin.rs  context.rs  mod.rs  (+15 more)
crates/maya-scene-kit-python/: Cargo.toml  pyproject.toml
crates/maya-scene-kit-python/python/maya_scene_kit/: __init__.py
crates/maya-scene-kit-python/src/: api.rs  json.rs  lib.rs  schema.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/ma_selective/: basic.ma
fuzz/corpus/mb_parse/: minimal.mb
fuzz/corpus/mel_top_level/: basic.mel
fuzz/corpus/observe_execution_bytes/: basic.ma
fuzz/fuzz_targets/: ma_selective.rs  mb_parse.rs  mel_top_level.rs  observe_execution_bytes.rs
(+96 files in other folders)
