[package]
name = "maya-scene-kit"
version = "0.1.0"
edition = "2021"

[lib]
name = "maya_scene_kit"
path = "src/lib.rs"

[[bin]]
name = "maya-scene-kit"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = true, features = ["clock"] }
clap = { version = "4", features = ["std"] }
regex = "1"
serde_json = "1"
once_cell = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
