[workspace]
resolver = "2"
members = [
    "crates/maya-scene-kit-formats",
    "crates/maya-scene-kit-observe",
    "crates/maya-scene-kit-audit",
    "crates/maya-scene-kit-edit",
    "crates/maya-scene-kit-cli",
    "crates/maya-scene-kit-python",
    "crates/maya-scene-kit-gui",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.2.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/yamahigashi/MayaSceneKit"
readme = "README.md"

[patch.crates-io]
gpui = { path = "vendor/gpui" }
gpui-component = { path = "vendor/gpui-component" }
