[package]
name = "maya-scene-kit-edit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = false
description = "Patch planning and materialization for Maya scene rewrites."

[lib]
name = "maya_scene_kit_edit"
path = "src/lib.rs"

[dependencies]
maya-scene-kit-formats = { path = "../maya-scene-kit-formats" }
maya-scene-kit-observe = { path = "../maya-scene-kit-observe" }
chrono = { version = "0.4", default-features = true, features = ["clock"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
maya-scene-kit-observe = { path = "../maya-scene-kit-observe" }
tempfile = "3"
