[package]
name = "maya-scene-kit-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = false
description = "Low-level Maya ASCII and binary parsing, spans, bytes, and rewrite primitives."

[lib]
name = "maya_scene_kit_formats"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = true, features = ["clock"] }
maya-mel = "0.1.4"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
encoding_rs = "0.8"
tempfile = "3"
