[package]
name = "maya-scene-kit-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = false
description = "Experimental desktop GUI for inspecting, auditing, and rewriting Maya scene files."

[lib]
name = "maya_scene_kit_gui"
path = "src/lib.rs"

[[bin]]
name = "maya-scene-kit-gui"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
gpui = { version = "0.2.2", features = ["test-support"] }
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
maya-scene-kit-observe = { path = "../maya-scene-kit-observe" }
maya-scene-kit-audit = { path = "../maya-scene-kit-audit" }
maya-scene-kit-edit = { path = "../maya-scene-kit-edit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
encoding_rs = "0.8"
tempfile = "3"

[build-dependencies]
embed-resource = "3.0"
