[package]
name = "maya-scene-kit-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = false
description = "Read-only Maya scene decoding, schema lookup, recovery, and diagnostics."

[lib]
name = "maya_scene_kit_observe"
path = "src/lib.rs"

[dependencies]
include_dir = "0.7"
maya-scene-kit-formats = { path = "../maya-scene-kit-formats" }
chrono = { version = "0.4", default-features = true, features = ["clock"] }
once_cell = "1"
regex = "1"
rustpython-parser = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
