[package]
name = "maya-scene-kit-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = false
description = "Experimental Python bindings for inspecting, auditing, and rewriting Maya scene files."

[lib]
name = "maya_scene_kit_native"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
include_dir = "0.7"
maya-scene-kit-observe = { path = "../maya-scene-kit-observe" }
maya-scene-kit-audit = { path = "../maya-scene-kit-audit" }
maya-scene-kit-edit = { path = "../maya-scene-kit-edit" }
pyo3 = { version = "0.23", features = ["abi3-py37"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
