[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "maya-scene-kit"
version = "0.1.0"
description = "Experimental Python bindings for maya-scene-kit."
requires-python = ">=3.7"
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/yamahigashi/MayaSceneKit"
Issues = "https://github.com/yamahigashi/MayaSceneKit/issues"
Changelog = "https://github.com/yamahigashi/MayaSceneKit/releases"

[tool.maturin]
python-source = "python"
module-name = "maya_scene_kit.maya_scene_kit_native"
